tests/baselines/reference/MemberAccessorDeclaration15.errors.txt
==== tests/cases/compiler/MemberAccessorDeclaration15.ts (1 errors) ====
    class C {
       set Foo(public a: number) { }
               ~~~~~~
!!! MemberAccessorDeclaration15.ts(2,12): error TS2246: A parameter property is only allowed in a constructor implementation.
    }